login signup and index updated

--- a/styles.css
+++ b/styles.css
@@ -27,20 +27,7 @@ header {
     max-height: 50px;
 }
 
-.search-panel input[type="text"] {
-    padding: 8px;
-    border: none;
-    border-radius: 5px;
-}
 
-.search-panel button {
-    padding: 8px 15px;
-    border: none;
-    border-radius: 5px;
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-}
 
 .menu {
     list-style-type: none;
@@ -314,3 +301,115 @@ header {
     transform: translateY(-3px);
 }
 
+/* Styling for the login section */
+.login-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url(image1.jpg);
+    background-size: cover;
+    font-family: Arial, sans-serif; 
+}
+
+.login-form {
+    background: transparent; 
+    backdrop-filter: blur(8px);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Shadow effect */
+    width: 300px; /* Adjust the width as needed */
+}
+
+.login-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.input-group {
+    margin-bottom: 15px;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff; /* Blue submit button */
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #0056b3; 
+}
+
+
+/* signup*/
+
+.signup-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url(image1.jpg);
+    background-size: cover;
+    font-family: Arial, sans-serif; 
+}
+
+.signup-form-container {
+    background: transparent; 
+    backdrop-filter: blur(8px);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Shadow effect */
+    width: 300px; /* Adjust the width as needed */
+}
+
+.signup-form h2 {
+    margin-bottom: 20px;
+}
+
+.input-group {
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #28a745; /* Button color */
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+    background-color: #218838; /* Darker button color on hover */
+}
